<resources>
    <string name="app_name">PAYG Locking App</string>
    <string name="open_app_usage_setting">Open Apps with usage access settings</string>
    <string name="last_time_used">"Last time used: "</string>
    <string name="time_span">"Time span: "</string>
    <string name="display_order_text">Sort by:</string>
    <string name="app_name_label">App</string>
    <string name="last_time_used_label">Last use</string>
    <!-- label for usage time -->
    <string name="usage_time_label">Usage time</string>


    <string name="login_button">LOGIN</string>
    <string name="login_edittext_hint">Phone number</string>
    <string name="login_title">Register your tablet</string>
    <string name="login_sub_title">Please enter your phone number</string>
    <string name="login_phone_error">invalid format (+255 xxx xxx xxx)</string>

    <string name="payment_bar_button">App Usage</string>
    <string name="payment_title">Payment Status</string>
    <string name="payment_sub_title">Click \'Refresh\' after you paid to make sure it is up to date</string>
    <string name="payment_button_refresh">REFRESH STATUS</string>
    <string name="payment_text_1">You have paid for the usage of your system until the\u0020</string>
    <string name="payment_text_2">. Make sure to pay again before that date to keep using your tablet.</string>

    <string name="sharedpref_title">tablet</string>
    <string name="sharedpref_serial">serial_number</string>
    <string name="sharedpref_expiration_date">expirtaion_date</string>
    <string name="sharedpref_password">password</string>
    <string name="sharedpref_service">service_running</string>
    <string name="sharedpref_phone">client_phone</string>
    <string name="sharedpref_payg_status">payg_status</string>
    <string name="sharedpref_access_token">access_token</string>


    <string name="postgres_driver">org.postgresql.Driver</string>
    <string name="postgres_user">postgres</string>
    <string name="postgres_password">1100</string>
    //192.168.21.121
    <string name="postgres_address_db">jdbc:postgresql://10.0.2.2:5432/testdb</string>

    <string name="url_item_1">Last visit:\u0020</string>
    <string name="url_item_2">Visits:\u0020</string>

    <string name="app_item_1">Last use:\u0020</string>
    <string name="app_item_2">used for:\u0020</string>
    <string name="app_item_3">Send :\u0020</string>
    <string name="app_item_4">, Received :\u0020</string>
    <string name="app_item_5">Category:\u0020</string>

    <string name="url_get_expiration_date_and_password">http://178.62.238.83:8000/api/v1/tablets/</string>
    <string name="url_save_reports">http://178.62.238.83:8000/api/v1/monitoring/reports/</string>
    <string name="url_register_tablet">http://178.62.238.83:8000/api/v1/tablets/</string>
    <string name="url_token_request"></string>

    <string name="date_format">yyyy-MM-dd</string>
    <string name="toast_no_connection">Please check your connection</string>
    <string name="toast_invalid_phone_number">No client registered with that number</string>
    <string name="toast_already_registered_tablet">This tablet is already registered</string>

    <integer name="TOP_WEBSITE_NUMBER">10</integer>
    <integer name="TOP_APP_NUMBER">10</integer>
    <integer name="data_used_interval_in_months">1</integer>
    <integer name="app_used_interval_in_months">1</integer>
    <integer name="service_loop_interval_in_milliseconds">900000</integer>

    <string-array name="packages_to_ignore">
        <!-- <item>PAYG Locking App</item> !-->
        <item>Launcher3</item>
        <item>Settings</item>
        <item>Package installer</item>
        <item>System UI</item>
        <item>Google Play services</item>
        <item>Google App</item>
    </string-array>
</resources>
