<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <android.support.v7.widget.Toolbar
        android:layout_alignParentTop="true"
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:textAlignment="center"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/textsize_actionbar"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />
    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_margin="30dp"
        android:textColor="@color/White"
        android:background="@color/cyan_500"
        android:text="@string/login_button" />

    <EditText
        android:id="@+id/EdTLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/login"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:hint="@string/login_edittext_hint"
        android:inputType="phone" />

    <TextView
        android:layout_below="@id/my_toolbar"
        android:id="@+id/txtREgister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/login_title"
        android:textColor="@color/gray_title"
        android:textSize="@dimen/textsize_title"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtREgister"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/login_sub_title"
        android:textSize="@dimen/textsize_subtitle" />

</RelativeLayout>