<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".PaymentCheckActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/background"
        android:textAlignment="center"
        app:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/Black"
                android:textSize="@dimen/textsize_actionbar"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_to_usage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/payment_bar_button"
                android:textColor="@color/gray_title"
                android:textSize="@dimen/textsize_actionbutton_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_alignParentBottom="true"
                android:background="@android:color/holo_red_dark" />
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>


    <TextView
        android:id="@+id/txtNoticeDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="30dp"
        android:textSize="@dimen/textsize_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtTopTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/payment_title"
        android:textColor="@color/gray_title"
        android:textSize="@dimen/textsize_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTopTitle"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/payment_sub_title"
        android:textSize="@dimen/textsize_subtitle" />

    <Button
        android:id="@+id/btnrefreshstatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtNoticeDate"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:padding="@dimen/activity_horizontal_margin"
        android:textColor="@color/White"
        android:background="@color/red"
        android:text="@string/payment_button_refresh" />
</RelativeLayout>